# fastapi-react-chat

./: .gitignore
backend/: pyproject.toml
user-service/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  req.txt
user-service/src/: config.py  main.py
user-service/src/database/: db.py
user-service/src/models/: user_model.py
